--- a/inter.html
+++ b/inter.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERTRUBUS</title>
+    <link rel="stylesheet" href="css/style.css">  
 </head>
 <body>
-<header><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
-  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-  border-radius: 8px; will-change: transform;">
-   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGAoejXuUg&#x2F;G8EGq8AMGDgtdgtehXskBQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-   </iframe>
- </div></header>
- <main>
-  esta es la Historia 
- </main>
+<header><p>Historia</p></header>
+ <main> 
+  <img class="img" src="img/hi [Tamaño original] (2).jpg" alt="">
+</main>
+
   
- <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGAoejXuUg&#x2F;G8EGq8AMGDgtdgtehXskBQ&#x2F;view?utm_content=DAGAoejXuUg&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">hi [Tamaño original]</a> 
 </body>
 </html>
