--- a/inter.html
+++ b/inter.html
@@ -6,7 +6,7 @@
     <title>INTERTRUBUS</title>
     <link rel="stylesheet" href="css/style.css">  
 </head>
-<body>
+<body>luis
 <header><p>Historia</p></header>
  <main> 
   <img class="img" src="img/hi [Tamaño original] (2).jpg" alt="">
