--- a/juegos.html
+++ b/juegos.html
@@ -55,7 +55,7 @@
         <section class="Juegos">
             <img class="imagenes" src="img/ajedres.jpg" alt="Juego 3">
             <div class="info">
-                <h2>JOEGO 3:AJEDREZ</h2>
+                <h2>JUEGO 3:AJEDREZ</h2>
                 <h3>Descripción breve del Juego 3.</h3>
                 <p>El ajedrez es un juego de estrategia donde dos jugadores se enfrentan en un tablero de 64 casillas.</p>
                 <h3>Reglas básicas:</h3>
@@ -65,9 +65,7 @@
                     <li><p></p></li>
                     <li><p></p></li>
                     <li><p></p></li>
-                    <li><p></p></li>
-                    <li>Regla 2</li>
-                    <li>Regla 3</li>
+
                 </ul>
             </div>
         </section>
