mejoras y terminadas las reglas del ajedres

--- a/juegos.html
+++ b/juegos.html
@@ -60,11 +60,11 @@
                 <p>El ajedrez es un juego de estrategia donde dos jugadores se enfrentan en un tablero de 64 casillas.</p>
                 <h3>Reglas básicas:</h3>
                 <ul>
-                    <li><p></p></li>
-                    <li><p></p></li>
-                    <li><p></p></li>
-                    <li><p></p></li>
-                    <li><p></p></li>
+                    <li><p>saber los mobimientos de las piesas</p></li>
+                    <li><p>saber el uso da las piesas</p></li>
+                    <li><p>no poder mover mas de una piesa por turno</p></li>
+                    <li><p>cada jugador tiene 15 minutos por partido y si se queda sin tiempo pierde</p></li>
+                    <li><p>cada participante tiene 16 piesas</p></li>
 
                 </ul>
             </div>
